kubernetes-monitoring/prometheus_without_operator/nginx-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hw8-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw8-dp
  namespace: hw8-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw8-pod
  template:
    metadata:
      name: hw8-pod
      labels:
        app: hw8-pod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      containers:
      - image: hardkov/otus-hw8:v0.0.1
        name: hw8-container
        ports:
        - containerPort: 8000
      # описание nginx-exporter
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.10.0
        args: ["-nginx.scrape-uri", "http://localhost:8000/basic_status"]
        ports:
          - containerPort: 9113

---
apiVersion: v1
kind: Service
metadata:
  name: hw8-svc
  namespace: hw8-ns
spec:
  selector:
    app: hw8-pod
  type: ClusterIP
  ports:
    - name: hw8-svc-port
      protocol: TCP
      port: 80
      targetPort: 9113

#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: hw8-ingress
#  namespace: hw8-ns
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /basic_status
#            pathType: Prefix
#            backend:
#              service:
#                name: hw8-svc
#                port:
#                  number: 8000
